language/grammar/mir/test/corpus/calls.txt
==================================
Call instruction families
==================================

function @calls(v0: int64, v1: int64) -> int64 {
entry:
    call @callee(v0, v1): (int64, int64) -> int64 -> join(v2) | cleanup
join(v2: int64):
    call.virtual @Class.add(v0, v2): (int64, int64) -> int64 -> next(v3)
next(v3: int64):
    call.dynamic @iface.mul(v0, v3): (int64, int64) -> int64 -> last(v4)
last(v4: int64):
    tailCall.indirect v4(v0): (int64) -> int64
cleanup:
    unwind.resume
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (arrow)
  (type_keyword)
  (punctuation)
  (identifier)
  (punctuation)
  (terminator_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (punctuation)
  (punctuation)
  (type_keyword)
  (punctuation)
  (type_keyword)
  (punctuation)
  (arrow)
  (type_keyword)
  (arrow)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (operator)
  (identifier)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (punctuation)
  (terminator_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (punctuation)
  (punctuation)
  (type_keyword)
  (punctuation)
  (type_keyword)
  (punctuation)
  (arrow)
  (type_keyword)
  (arrow)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (punctuation)
  (terminator_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (punctuation)
  (punctuation)
  (type_keyword)
  (punctuation)
  (type_keyword)
  (punctuation)
  (arrow)
  (type_keyword)
  (arrow)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (punctuation)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (punctuation)
  (punctuation)
  (type_keyword)
  (punctuation)
  (arrow)
  (type_keyword)
  (identifier)
  (punctuation)
  (terminator_keyword)
  (punctuation))
