language/grammar/mir/test/corpus/core.txt
==================================
Function with block and return
==================================

function @fib(v0: i64) -> i64 {
block0(v0: i64):
    v1: i64 = iconst 2i64
    return v1
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (number_literal)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation))


==================================
Control flow terminators and block args
==================================

function @flow(v0: i64, v1: i64) -> i64 {
block0(v0: i64, v1: i64):
    branch v0, block1(v1), block2(v0)
block1(v2: i64):
    check v2, block3, block4
block2(v3: i64):
    jump block4
block3:
    yield v2
block4:
    switch v1, block5, block6
block5:
    return v0
block6:
    unreachable
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (block_identifier)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (terminator_keyword)
  (block_identifier)
  (block_identifier)
  (punctuation)
  (terminator_keyword)
  (ssa_identifier)
  (block_identifier)
  (punctuation)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (block_identifier)
  (block_identifier)
  (punctuation)
  (terminator_keyword)
  (ssa_identifier)
  (block_identifier)
  (punctuation)
  (terminator_keyword)
  (punctuation))


==================================
Call instruction families
==================================

function @calls(v0: i64, v1: i64, v2: fn(i64, i64) -> i64) -> i64 {
block0(v0: i64, v1: i64, v2: fn(i64, i64) -> i64):
    v3: i64 = call @callee(v0, v1) -> fn(i64, i64) -> i64
    v4: i64 = call.virtual @iface.add(v0, v1) -> fn(i64, i64) -> i64
    v5: i64 = call.interface @iface.mul(v0, v1) -> fn(i64, i64) -> i64
    v6: i64 = call.indirect v2(v4, v5) -> fn(i64, i64) -> i64
    return v6
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation))


==================================
Memory qualifiers and memory ops
==================================

function @memory(v0: i64) -> void {
block0(v0: i64):
    v1: ref<managed i64> = managed.alloc_array i64, v0
    v2: ref<borrowed i64> = element.addr v1, v0
    v3: ref<owned i64> = raw.alloc i64
    store v2, v0
    raw.drop v3
    raw.free v3
    stack.drop v1
    return
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (memory_keyword)
  (identifier)
  (operator)
  (operator)
  (identifier)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (memory_keyword)
  (identifier)
  (operator)
  (operator)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (memory_keyword)
  (identifier)
  (operator)
  (operator)
  (identifier)
  (identifier)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (identifier)
  (ssa_identifier)
  (identifier)
  (ssa_identifier)
  (identifier)
  (ssa_identifier)
  (terminator_keyword)
  (punctuation))


==================================
Numbers and string literals
==================================

function @literals() -> void {
block0:
    v0: i64 = iconst 0i64
    v1: i64 = iconst -1i64
    v2: u32 = iconst +255u32
    v3: f64 = fconst 3.1415
    v4: f64 = fconst 1.25e+10
    v5: i64 = iconst 1_000_000i64
    call @log("line\\nvalue", 'x', v0, v1, v2, v3, v4, v5) -> fn() -> void
    return
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (number_literal)
  (identifier)
  (symbol_identifier)
  (punctuation)
  (string_literal)
  (punctuation)
  (string_literal)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (punctuation)
  (arrow)
  (identifier)
  (terminator_keyword)
  (punctuation))


==================================
Type token forms
==================================

function @types(v0: ptr<raw i8>, v1: ref<borrowed vector<i32, 4>>, v2: tensor<f32, 4, 4>) -> type {
block0(v0: ptr<raw i8>, v1: ref<borrowed vector<i32, 4>>, v2: tensor<f32, 4, 4>):
    v3: isize = cast v0
    v4: usize = cast v3
    return v4
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (memory_keyword)
  (identifier)
  (operator)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (memory_keyword)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (number_literal)
  (operator)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (number_literal)
  (punctuation)
  (number_literal)
  (operator)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (memory_keyword)
  (identifier)
  (operator)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (memory_keyword)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (number_literal)
  (operator)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (number_literal)
  (punctuation)
  (number_literal)
  (operator)
  (punctuation)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (ssa_identifier)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (ssa_identifier)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation))


==================================
Comments, globals, and dotted symbols
==================================

// header comment
/* block comment */
function @misc.foo_bar(v0: bool) -> void {
block0(v0: bool):
    intrinsic.memset(v0, v0)
    local.set v0, v0
    local.get v0
    local.addr v0
    function.addr @misc.foo_bar
    function.env @misc.foo_bar
    global.addr @G0
    global.const @G1
    return
}


---

(source_file
  (line_comment)
  (block_comment)
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (identifier)
  (ssa_identifier)
  (identifier)
  (ssa_identifier)
  (identifier)
  (symbol_identifier)
  (identifier)
  (symbol_identifier)
  (identifier)
  (symbol_identifier)
  (identifier)
  (symbol_identifier)
  (terminator_keyword)
  (punctuation))


==================================
Operator-heavy instruction lines
==================================

function @ops(v0: i64, v1: i64) -> i64 {
block0(v0: i64, v1: i64):
    v2: i64 = binary.add v0, v1
    v3: i64 = unary.neg v2
    v4: bool = compare.eq v2, v3
    v5: i64 = select v4, v2, v3
    v6: i64 = v5 << 1i64
    v7: i64 = v6 >> 1i64
    v8: i64 = v7 & v2 | v3 ^ v1
    return v8
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (ssa_identifier)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (ssa_identifier)
  (operator)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (ssa_identifier)
  (operator)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (ssa_identifier)
  (operator)
  (ssa_identifier)
  (operator)
  (ssa_identifier)
  (operator)
  (ssa_identifier)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation))


==================================
Unknown token fallback
==================================

function @unknown() -> void {
block0:
    ?maybe
    return
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (unknown)
  (identifier)
  (terminator_keyword)
  (punctuation))


==================================
Brackets and delimiters
==================================

function @brackets(v0: i64) -> void {
block0:
    v1: tuple<i64, i64> = struct { v0, v0 }
    v2: array<i64, 4> = array [v0, v0, v0, v0]
    call @print(v1, v2);
    return
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (arrow)
  (identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (identifier)
  (operator)
  (operator)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (number_literal)
  (operator)
  (operator)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (punctuation)
  (terminator_keyword)
  (punctuation))
