language/grammar/mir/test/corpus/literals.txt
==================================
Numbers and string literals
==================================

function @literals() -> void {
block0:
    v0: i64 = iconst 0i64
    v1: i64 = iconst -1i64
    v2: u32 = iconst +255u32
    v3: f64 = fconst 3.1415
    v4: f64 = fconst 1.25e+10
    v5: i64 = iconst 1_000_000i64
    call @log("line\\nvalue", 'x', v0, v1, v2, v3, v4, v5) -> () -> void
    return
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (punctuation)
  (arrow)
  (type_keyword)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (identifier)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (identifier)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (identifier)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (identifier)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (identifier)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (identifier)
  (number_literal)
  (terminator_keyword)
  (symbol_identifier)
  (punctuation)
  (string_literal)
  (punctuation)
  (string_literal)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (arrow)
  (punctuation)
  (punctuation)
  (arrow)
  (type_keyword)
  (terminator_keyword)
  (punctuation))
