language/grammar/mir/test/corpus/operators.txt
==================================
Operator-heavy instruction lines
==================================

function @ops(v0: i64, v1: i64) -> i64 {
block0(v0: i64, v1: i64):
    v2: i64 = binary.add v0, v1
    v3: i64 = unary.neg v2
    v4: bool = compare.eq v2, v3
    v5: i64 = select v4, v2, v3
    v6: i64 = v5 << 1i64
    v7: i64 = v6 >> 1i64
    v8: i64 = v7 & v2 | v3 ^ v1
    return v8
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (arrow)
  (type_keyword)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (identifier)
  (ssa_identifier)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (ssa_identifier)
  (operator)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (ssa_identifier)
  (operator)
  (number_literal)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (ssa_identifier)
  (operator)
  (ssa_identifier)
  (operator)
  (ssa_identifier)
  (operator)
  (ssa_identifier)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation))
