language/grammar/mir/test/corpus/recovery.txt
==================================
Unknown token fallback
==================================

function @unknown() -> void {
block0:
    ?maybe
    return
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (punctuation)
  (arrow)
  (type_keyword)
  (punctuation)
  (block_identifier)
  (punctuation)
  (unknown)
  (identifier)
  (terminator_keyword)
  (punctuation))
