language/grammar/mir/test/corpus/symbols.txt
==================================
Comments, globals, and dotted symbols
==================================

// header comment
/* block comment */
function @misc.foo_bar(v0: boolean) -> void {
block0(v0: boolean):
    intrinsic.memset(v0, v0)
    local.set v0, v0
    local.get v0
    local.address v0
    function.address @misc.foo_bar
    closure.environment
    global.address @G0
    global.address @G1
    return
}


---

(source_file
  (line_comment)
  (block_comment)
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (arrow)
  (type_keyword)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (punctuation)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (identifier)
  (ssa_identifier)
  (punctuation)
  (ssa_identifier)
  (identifier)
  (ssa_identifier)
  (identifier)
  (ssa_identifier)
  (identifier)
  (symbol_identifier)
  (identifier)
  (identifier)
  (symbol_identifier)
  (identifier)
  (symbol_identifier)
  (terminator_keyword)
  (punctuation))

==================================
Local and function identifiers
==================================

function @identifier.kinds(v0: int64) -> void {
block0:
    local0 = v0
    function0 = @identifier.kinds
    call function0(v0): (int64) -> void
    return
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (arrow)
  (type_keyword)
  (punctuation)
  (block_identifier)
  (punctuation)
  (local_identifier)
  (operator)
  (ssa_identifier)
  (function_identifier)
  (operator)
  (symbol_identifier)
  (terminator_keyword)
  (function_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (punctuation)
  (punctuation)
  (type_keyword)
  (punctuation)
  (arrow)
  (type_keyword)
  (terminator_keyword)
  (punctuation))
